package com.pm.billingservice.grpc;

import billing.BillingRequest;
import billing.BillingServiceGrpc;
import net.devh.boot.grpc.server.service.GrpcService;
@GrpcService
public class BillingGrpcService  extends BillingServiceGrpc.BillingServiceImplBase {

@Override
    public void createBillingAccount(BillingRequest billingRequest){
    Strea
}


}
